# pico-dual-cdc

./: CMakeLists.txt  README.md
include/: tusb_config.h
src/: led.c  led.h  main.c  millis.h  usb_descriptors.c
